--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,8 @@
   ],
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "routes": [
-    { "src": "/(?!.*\\.).*", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(?!.*\\.).*", "destination": "/index.html" }
   ],
   "headers": [
     {
