--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "routes": [
-    { "src": "/(?!.*\\.).*", "dest": "/index.html" }
+    { "src": "/(?!.\\.).", "dest": "/index.html" }
   ],
   "headers": [
     {
